changed some css for better scroll flow and testing functionality of contact form with https://formspree.io

--- a/css/wbbstyle.css
+++ b/css/wbbstyle.css
@@ -1,19 +1,26 @@
 body {
-  background: #333;
+  background: url(../img/logo-wood.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   color: white;
 }
 
 .navbar {
-  border-bottom: #008ed6 3px solid;
+  border-bottom: #ffd700 3px solid;
   opacity: 0.8;
 }
 
 #home-section {
-  background: center url(../img/logo-wood.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
   min-height: 700px;
+}
+
+#about-head-section {
+  background: #333;
+}
+
+#support-head-section {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 #home-section .dark-overlay {
@@ -21,12 +28,12 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 700px;
+  min-height: 725px;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
 #home-section .home-inner {
-  padding-top: 150px;
+  padding-top: 350px;
 }
 
 #home-section .card-form {
@@ -34,7 +41,7 @@ body {
 }
 
 #home-section .fas {
-  color: #008ed6;
+  color: #ffd700;
   background-color: #fff;
   padding: 5px;
   border-radius: 5px;
@@ -42,8 +49,6 @@ body {
 
 #about-section .fas,
 #support-section .fas {
-  background-color: #333;
-  color: #fff;
   padding: 5px;
   border-radius: 5px;
 }
